Fixed body scrolling issue on mobile view

--- a/style.css
+++ b/style.css
@@ -221,6 +221,7 @@ section {
     
     body {
         background-attachment: fixed;
+        overflow: hidden;
     }
 
     header {
